<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string translatable="false"  name="news_list_screen">news_list_screen</string>
    <string name="search_icon">Search Icon</string>
    <string name="search">Search</string>
    <string name="filters_icon">Filters Icon</string>
    <string name="filters">Filters</string>
    <string translatable="false"  name="search_news_screen">search_news_screen</string>
    <string name="news">News</string>
    <string name="favorites">Favorites</string>
    <string translatable="false"  name="favorites_screen">favorites_screen</string>
    <string name="back_icon">Back Icon</string>
    <string name="no_news_available">No news available</string>
    <string translatable="false"  name="news_filters">news_filters</string>
    <string translatable="false"  name="countries_dialog">countries_dialog</string>
    <string translatable="false"  name="search_news_text_field">search_news_textfield</string>
    <string translatable="false"  name="clear_search">clear_search</string>
    <string name="by">By %1$s, %2$s</string>
    <string name="share_icon">Share Icon</string>
    <string name="added_to_favorite_icon">Added to Favorite Icon</string>
    <string name="not_added_to_favorite_icon">Not added to Favorite Icon</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="follow_system">Follow System</string>
    <string name="la_sw" translatable="false">Kiswahili</string>
    <string name="la_en" translatable="false">English</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="no_favorites_yet">No favorites yet</string>
    <string name="all_news">All News</string>
    <string name="select_country">Select Country</string>
    <string name="select_category">Select Category</string>
    <string name="okay">Okay</string>
    <string name="search_placeholder" tools:ignore="TypographyEllipsis">Search...</string>
    <string name="theme">Theme</string>
    <string translatable="false"  name="settings_screen">settings_screen</string>
    <string name="select_theme">Select Theme</string>
    <string name="app_version">App Version</string>
    <string name="use_system_settings">Use System Settings</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="material_you">Material You</string>
    <string name="a_network_error_occurred_please_check_your_connection_and_try_again">A network error occurred, please check your connection and try again</string>
    <string name="an_unknown_error_occurred_please_try_again">An unknown error occurred, please try again</string>
</resources>